WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 152929
Modern IDB: imported/w3c/indexeddb/keyorder.htm times out
https://bugs.webkit.org/show_bug.cgi?id=152929
Summary
Modern IDB: imported/w3c/indexeddb/keyorder.htm times out
Brady Eidson
Reported
2016-01-08 14:24:22 PST
Modern IDB: imported/w3c/indexeddb/keyorder.htm times out This is actually a bug in the run-webkit-tests harness, possibly in python:
https://bugs.webkit.org/show_bug.cgi?id=152928
But in the meantime, we can enable this test by cutting back on unnecessarily ridiculous logging.
Attachments
Patch v1
(2.67 KB, patch)
2016-01-08 14:51 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-08 14:51:00 PST
Created
attachment 268587
[details]
Patch v1
Alex Christensen
Comment 2
2016-01-08 14:54:17 PST
So this was always passing, it just timed out on machines with the log enabled, such as yours.
Brady Eidson
Comment 3
2016-01-08 14:54:49 PST
(In reply to
comment #2
)
> So this was always passing, it just timed out on machines with the log > enabled, such as yours.
👍
WebKit Commit Bot
Comment 4
2016-01-08 15:42:12 PST
Comment on
attachment 268587
[details]
Patch v1 Clearing flags on attachment: 268587 Committed
r194800
: <
http://trac.webkit.org/changeset/194800
>
WebKit Commit Bot
Comment 5
2016-01-08 15:42:15 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug