Modern IDB: imported/w3c/indexeddb/keyorder.htm times out. https://bugs.webkit.org/show_bug.cgi?id=152929

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Existing test now runs in the test harness).

* Modules/indexeddb/client/IDBCursorImpl.cpp:
(WebCore::IDBClient::IDBCursor::setGetResult):

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/171012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194800 268f45cc-cd09-0410-ab3c-d52691b4dbfc